# Sharded-Google-Photos

./: .flake8  .gitignore  README.md  pyproject.toml
.github/workflows/: check-pull-request.yaml
docs/: create_client_id.md
sharded_google_photos/: main.py
sharded_google_photos/backup/: add_new_metadata.py  diffs_splitter.py  gphotos_backup.py  gphotos_backup_events.py  gphotos_uploader.py  gphotos_uploader_events.py  gphotos_uploader_reporter.py  group_diffs_with_metadata.py  media_item_repository.py  models.py  repositories.py  shared_album_repository.py
sharded_google_photos/cleanup/: events.py  gphotos_cleaner.py
sharded_google_photos/shared/: gphotos_album_client.py  gphotos_client.py  gphotos_mediaitem_client.py
sharded_google_photos/shared/reporters/: chunked_upload_reporter.py
sharded_google_photos/shared/testing/: fake_eventbus.py  fake_gphotos_album_client.py  fake_gphotos_client.py  fake_gphotos_mediaitem_client.py  fake_gphotos_repository.py  mocked_saved_credentials_file.py
tests/backup/: test_add_new_metadata.py  test_diff_splitter.py  test_gphotos_backup.py  test_gphotos_uploader.py  test_group_diffs_with_metadata.py  test_media_item_repository.py  test_repositories.py  test_shared_album_repository.py
tests/cleanup/: test_gphotos_cleaner.py
tests/gphotos_cleaner/: test_gphotos_cleaner.py
tests/shared/: test_gphotos_album_client.py  test_gphotos_client.py  test_gphotos_mediaitem_client.py
tests/shared/testing/: test_fake_eventbus.py  test_fake_gphotos_client.py
