[tool.poetry]
name = "sharded-google-photos"
version = "0.1.4"
description = "A tool to shard photos across multiple Google Photo accounts"
authors = ["Emilio K <e.kartonoe@gmail.com>"]
license = "GNU General Public License v3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
google-api-python-client = "^2.122.0"
google-auth-oauthlib = "^1.2.0"


[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
pytest = "^8.1.1"
flake8 = "^7.0.0"
flake8-bugbear = "^24.2.6"
coverage = "^7.4.4"
pytest-mock = "^3.12.0"
requests-mock = "^1.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
omit = [".*", "*/site-packages/*"]
[tool.coverage.report]
fail_under = 50
